helm-charts/ingress.yml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /music-app(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: music-app-chart
            port:
              number: 80
      - path: /weather-app(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: weather-app-chart
            port:
              number: 80
      - path: /qr-app(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: qr-app-chart
            port:
              number: 5000
      - path: /notes-app(/\$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: notes-app-chart
            port:
              number: 8000
